c/soloud_c.h


typedef void * AudioCollider;

typedef void * AudioAttenuator;

typedef void * Filter;

typedef void * WavStream;

typedef void * File;


/*
 * WavStream
 */
void WavStream_destroy(WavStream * aWavStream);

WavStream * WavStream_create();

int WavStream_load(WavStream * aWavStream, const char * aFilename);

int WavStream_loadMem(WavStream * aWavStream, const unsigned char * aData, unsigned int aDataLen);

int WavStream_loadMemEx(WavStream * aWavStream, const unsigned char * aData, unsigned int aDataLen, int aCopy /* = false */, int aTakeOwnership /* = true */);

int WavStream_loadToMem(WavStream * aWavStream, const char * aFilename);

int WavStream_loadFile(WavStream * aWavStream, File * aFile);

int WavStream_loadFileToMem(WavStream * aWavStream, File * aFile);

double WavStream_getLength(WavStream * aWavStream);

void WavStream_setVolume(WavStream * aWavStream, float aVolume);

void WavStream_setLooping(WavStream * aWavStream, int aLoop);

void WavStream_setAutoStop(WavStream * aWavStream, int aAutoStop);

void WavStream_set3dMinMaxDistance(WavStream * aWavStream, float aMinDistance, float aMaxDistance);

void WavStream_set3dAttenuation(WavStream * aWavStream, unsigned int aAttenuationModel, float aAttenuationRolloffFactor);

void WavStream_set3dDopplerFactor(WavStream * aWavStream, float aDopplerFactor);

void WavStream_set3dListenerRelative(WavStream * aWavStream, int aListenerRelative);

void WavStream_set3dDistanceDelay(WavStream * aWavStream, int aDistanceDelay);

void WavStream_set3dCollider(WavStream * aWavStream, AudioCollider * aCollider);

void WavStream_set3dColliderEx(WavStream * aWavStream, AudioCollider * aCollider, int aUserData /* = 0 */);

void WavStream_set3dAttenuator(WavStream * aWavStream, AudioAttenuator * aAttenuator);

void WavStream_setInaudibleBehavior(WavStream * aWavStream, int aMustTick, int aKill);

void WavStream_setLoopPoint(WavStream * aWavStream, double aLoopPoint);

double WavStream_getLoopPoint(WavStream * aWavStream);

void WavStream_setFilter(WavStream * aWavStream, unsigned int aFilterId, Filter * aFilter);

void WavStream_stop(WavStream * aWavStream);