soloud.odin


	// /*
	//  * WavStream
	//  */
	// WavStream_destroy :: proc(WavStream * aWavStream) ---
	// WavStream * WavStream_create :: proc() ---
	// int WavStream_load :: proc(WavStream * aWavStream, const char * aFilename) ---
	// int WavStream_loadMem :: proc(WavStream * aWavStream, const unsigned char * aData, unsigned int aDataLen) ---
	// int WavStream_loadMemEx :: proc(WavStream * aWavStream, const unsigned char * aData, unsigned int aDataLen, int aCopy /* = false */, int aTakeOwnership /* = true */) ---
	// int WavStream_loadToMem :: proc(WavStream * aWavStream, const char * aFilename) ---
	// int WavStream_loadFile :: proc(WavStream * aWavStream, File * aFile) ---
	// int WavStream_loadFileToMem :: proc(WavStream * aWavStream, File * aFile) ---
	// double WavStream_getLength :: proc(WavStream * aWavStream) ---
	// WavStream_setVolume :: proc(WavStream * aWavStream, aVolume: f32) ---
	// WavStream_setLooping :: proc(WavStream * aWavStream, aLoop: b32) ---
	// WavStream_setAutoStop :: proc(WavStream * aWavStream, aAutoStop: b32) ---
	// WavStream_set3dMinMaxDistance :: proc(WavStream * aWavStream, aMinDistance: f32, aMaxDistance: f32) ---
	// WavStream_set3dAttenuation :: proc(WavStream * aWavStream, unsigned int aAttenuationModel, aAttenuationRolloffFactor: f32) ---
	// WavStream_set3dDopplerFactor :: proc(WavStream * aWavStream, aDopplerFactor: f32) ---
	// WavStream_set3dListenerRelative :: proc(WavStream * aWavStream, int aListenerRelative) ---
	// WavStream_set3dDistanceDelay :: proc(WavStream * aWavStream, int aDistanceDelay) ---
	// WavStream_set3dCollider :: proc(WavStream * aWavStream, aCollider: ^AudioCollider) ---
	// WavStream_set3dColliderEx :: proc(WavStream * aWavStream, aCollider: ^AudioCollider, int aUserData /* = 0 */) ---
	// WavStream_set3dAttenuator :: proc(WavStream * aWavStream, aAttenuator: ^AudioAttenuator) ---
	// WavStream_setInaudibleBehavior :: proc(WavStream * aWavStream, aMustTick: b32, aKill: b32) ---
	// WavStream_setLoopPoint :: proc(WavStream * aWavStream, double aLoopPoint) ---
	// double WavStream_getLoopPoint :: proc(WavStream * aWavStream) ---
	// WavStream_setFilter :: proc(WavStream * aWavStream, unsigned int aFilterId, aFilter: ^Filter) ---
	// WavStream_stop :: proc(WavStream * aWavStream) ---
}
